--- a/FinalProject/app/src/main/res/values/colors.xml
+++ b/FinalProject/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FF000000</color>
-    <color name="green">#52EB27</color>
+    <color name="green">#FF52EB00</color>
 </resources>
