--- a/FinalProject/app/src/main/res/layout/fragment_spells.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_spells.xml
@@ -21,7 +21,7 @@
     <com.google.android.material.button.MaterialButton
         app:icon="@drawable/sharp_arrow_back_black_18dp"
         android:fontFamily="cursive"
-        android:id="@+id/back_button2"
+        android:id="@+id/spells_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
@@ -34,7 +34,7 @@
         android:name="com.example.finalproject.fragments.SpellCharacteristicsFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/back_button2"
+        app:layout_constraintBottom_toTopOf="@+id/spells_back_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout="@layout/fragment_spell_characteristics" />
