--- a/FinalProject/app/src/main/res/layout/fragment_chat.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_chat.xml
@@ -34,7 +34,7 @@
 
     <com.google.android.material.button.MaterialButton
         app:icon="@drawable/sharp_arrow_back_black_24dp"
-        android:id="@+id/back_button_chat"
+        android:id="@+id/chat_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
