--- a/FinalProject/app/src/main/res/layout/fragment_tutorial.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_tutorial.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/close_tutorial"
+        app:layout_constraintBottom_toTopOf="@+id/close_tutorial_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/close_tutorial"
+        android:id="@+id/close_tutorial_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
