--- a/FinalProject/app/src/main/res/layout/fragment_status_bar.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_status_bar.xml
@@ -11,6 +11,7 @@
         android:id="@+id/avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -48,6 +49,7 @@
         android:id="@+id/health"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="cursive"
         android:text="0/0"
@@ -92,6 +94,7 @@
         android:id="@+id/mana"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:fontFamily="cursive"
         android:text="0/0"
@@ -102,6 +105,7 @@
         android:id="@+id/gold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="cursive"
         android:text="0"
@@ -112,6 +116,7 @@
         android:id="@+id/exp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="cursive"
         android:text="0"
