--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,18 @@
         tools:layout_editor_absoluteY="731dp" />
 
     <FrameLayout
+        android:id="@+id/auction"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteY="731dp" />
+
+    <FrameLayout
+        android:id="@+id/tasks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteY="731dp" />
+
+    <FrameLayout
         android:id="@+id/chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
