--- a/FinalProject/app/src/main/res/layout/fragment_item_characteristics.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_item_characteristics.xml
@@ -73,4 +73,17 @@
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toEndOf="@+id/cost"
         app:layout_constraintTop_toBottomOf="@+id/category_field" />
+
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="cursive"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
