--- a/FinalProject/app/src/main/res/layout/fragment_settings_menu.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_settings_menu.xml
@@ -31,6 +31,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settings_button" />
 
+    <TextView
+        android:id="@+id/tasks_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Tasks"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/help_button" />
+
     <Button
         android:id="@+id/settings_menu_back_button"
         android:layout_width="wrap_content"
