--- a/FinalProject/app/src/main/res/layout/fragment_fight.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_fight.xml
@@ -70,6 +70,7 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="cursive"
         android:text="Your health"
+        android:textSize="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player" />
@@ -80,6 +81,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:text="Your mana"
+        android:textSize="16dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -94,33 +97,36 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="75dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="cursive"
         android:text="Enemy's health"
+        android:textSize="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enemy" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="75dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:fontFamily="cursive"
         android:text="Enemy's mana"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
-        android:fontFamily="cursive"
         android:id="@+id/your_health"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="cursive"
         android:text="TextView"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/player" />
 
@@ -131,6 +137,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="cursive"
         android:text="TextView"
+        android:textSize="16dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/your_health" />
 
@@ -142,6 +149,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="cursive"
         android:text="TextView"
+        android:textSize="16dp"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/enemy" />
 
@@ -152,6 +160,17 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="cursive"
         android:text="TextView"
+        android:textSize="16dp"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintTop_toBottomOf="@+id/enemy_health" />
+
+    <ProgressBar
+        android:id="@+id/fight_progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
