--- a/FinalProject/app/src/main/res/xml/first_village_map.xml
+++ b/FinalProject/app/src/main/res/xml/first_village_map.xml
@@ -11,63 +11,72 @@
     </row>
     <row>
         <map_title type="0"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
         <map_title type="0"/>
     </row>
     <row>
         <map_title type="0"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
         <map_title type="10"/>
         <map_title type="9"/>
+        <map_title type="14"/>
         <map_title type="8"/>
-        <map_title type="2"/>
         <map_title type="0"/>
     </row>
     <row>
         <map_title type="0"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
         <map_title type="5"/>
         <map_title type="5"/>
         <map_title type="5"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
         <map_title type="0"/>
     </row>
     <row>
         <map_title type="0"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
         <map_title type="11"/>
         <map_title type="4"/>
         <map_title type="12"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
         <map_title type="0"/>
     </row>
     <row>
         <map_title type="0"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
         <map_title type="4"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
         <map_title type="0"/>
     </row>
     <row>
         <map_title type="0"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
         <map_title type="4"/>
-        <map_title type="2"/>
-        <map_title type="2"/>
+        <map_title type="8"/>
+        <map_title type="8"/>
         <map_title type="0"/>
     </row>
     <row>
         <map_title type="0"/>
         <map_title type="0"/>
         <map_title type="0"/>
-        <map_title type="2"/>
+        <map_title type="13"/>
+        <map_title type="0"/>
+        <map_title type="0"/>
+        <map_title type="0"/>
+    </row>
+    <row>
+        <map_title type="0"/>
+        <map_title type="0"/>
+        <map_title type="0"/>
+        <map_title type="0"/>
         <map_title type="0"/>
         <map_title type="0"/>
         <map_title type="0"/>
