--- a/FinalProject/app/src/main/res/layout/fragment_crafting_station.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_crafting_station.xml
@@ -11,13 +11,13 @@
         android:id="@+id/crafts"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/characteristics1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/crafting_station_back_button" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/craft_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Craft"
@@ -33,4 +33,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/characteristics1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/craft_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/crafts"
+        app:layout_constraintVertical_bias="1.0">
+
+    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
