--- a/FinalProject/app/src/main/res/layout/fragment_inventory.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_inventory.xml
@@ -62,6 +62,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/characteristics" />
 
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:rotation="62"
+        android:rotationX="360"
+        android:rotationY="360"
+        android:text="No items"
+        android:textSize="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <FrameLayout
         android:id="@+id/characteristics"
         android:name="com.example.finalproject.fragments.ItemCharacteristicsFragment"
