--- a/FinalProject/app/src/main/res/xml/first_village_map.xml
+++ b/FinalProject/app/src/main/res/xml/first_village_map.xml
@@ -1,93 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <start_map>
     <row>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="8"/>
-        <map_title type="8"/>
-        <map_title type="8"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="520" />
+        <map_title id="520" />
+        <map_title id="520" />
+        <map_title id="520" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="10"/>
-        <map_title type="9"/>
-        <map_title type="14"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="522" />
+        <map_title id="521" />
+        <map_title id="526" />
+        <map_title id="520" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="5"/>
-        <map_title type="5"/>
-        <map_title type="5"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="517" />
+        <map_title id="517" />
+        <map_title id="517" />
+        <map_title id="520" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="11"/>
-        <map_title type="4"/>
-        <map_title type="12"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="523" />
+        <map_title id="516" />
+        <map_title id="524" />
+        <map_title id="520" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="4"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="516" />
+        <map_title id="520" />
+        <map_title id="767" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="4"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="516" />
+        <map_title id="520" />
+        <map_title id="767" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="8"/>
-        <map_title type="13"/>
-        <map_title type="8"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="520" />
+        <map_title id="525" />
+        <map_title id="520" />
+        <map_title id="767" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
     </row>
     <row>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
-        <map_title type="100"/>
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
+        <map_title id="767" />
     </row>
 </start_map>
