--- a/FinalProject/app/src/main/res/layout/fragment_tutorial.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_tutorial.xml
@@ -46,7 +46,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/show_tutorial"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
