new research model

--- a/FinalProject/app/src/main/res/layout/activity_main.xml
+++ b/FinalProject/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         tools:layout_editor_absoluteY="731dp" />
 
     <FrameLayout
+        android:id="@+id/characteristics"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteY="731dp" />
+
+    <FrameLayout
         android:id="@+id/auction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
