--- a/FinalProject/app/src/main/res/layout/fragment_research_tree.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_research_tree.xml
@@ -7,97 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".fragments.ResearchTreeFragment" >
 
-    <HorizontalScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/research_tree_back_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/research_points_amount"
-        app:layout_constraintVertical_bias="0.0">
-
-        <TableLayout
-            android:id="@+id/research_table"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/basic_spell_creation"
-                    android:layout_width="175dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="cursive"
-                    android:text="TextView"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20dp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/fire_mage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="cursive"
-                    android:text="TextView"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/water_mage"
-                    android:layout_width="175dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="cursive"
-                    android:text="TextView"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/air_mage"
-                    android:layout_width="175dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="cursive"
-                    android:text="TextView"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20dp" />
-
-                <TextView
-                    android:id="@+id/earth_mage"
-                    android:layout_width="175dp"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="cursive"
-                    android:text="TextView"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="20dp" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TableRow
-                android:layout_width="150dp"
-                android:layout_height="match_parent" />
-        </TableLayout>
-    </HorizontalScrollView>
-
     <com.google.android.material.button.MaterialButton
-        app:icon="@drawable/sharp_arrow_back_black_18dp"
         android:id="@+id/research_tree_back_button"
-        android:fontFamily="cursive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:text="back"
+        app:icon="@drawable/sharp_arrow_back_black_18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/research_button"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -112,5 +30,37 @@
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/researches_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/research_tree_back_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/research_points_amount"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <FrameLayout
+        android:id="@+id/research_charecteristics"
+        android:name="com.example.finalproject.fragments.ResearchCharacteristicsFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/research_tree_back_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.621"
+        app:layout_constraintStart_toEndOf="@+id/researches_list"
+        app:layout_constraintTop_toBottomOf="@+id/research_points_amount" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/research_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="cursive"
+        android:text="research"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/research_tree_back_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
